--- a/digitron.html
+++ b/digitron.html
@@ -24,6 +24,6 @@
       <br />
     <button>Izracunaj</button>
     <div></div>
-    <script src="digitron.js"></script>
+    <script src="digitron.js" type="text/javascript"></script>
   </body>
 </html>
